# RationalRotation

./: CMakeLists.txt  Functions.cpp  Functions.h  README.md  Rotation2D.cpp  Rotation2D.h  Rotation3D.cpp  Rotation3D.h  ball_r5.pgm  main.cpp
